Support operations with return* type, for UML2 migration support. Iterator -> For, Javadoc fixes, add Generics.